--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,8 @@
-db_host = "localhost"
-db_user = "your_username"
-db_password = "your_password"
-db_name = "your_database"
+# Попробуйте явно кодировать параметры в UTF-8
+self.conn = psycopg2.connect(
+    host=host.encode('utf-8').decode('utf-8'),
+    dbname=db_name.encode('utf-8').decode('utf-8'),
+    user=db_user.encode('utf-8').decode('utf-8'),
+    password=db_password.encode('utf-8').decode('utf-8'),
+    options='-c client_encoding=UTF8'
+)
